@@ -103,6 +103,7 @@ public abstract class SolrTestCaseJ4 extends LuceneTestCase {
     if (solrHome != null) {
       System.setProperty("solr.solr.home", solrHome);
     }
+    System.setProperty("solr.velocity.enabled", "false");
     initCore();
   }
 
